apps/kube-prometheus-stack/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-grafana
  namespace: monitoring
  annotations:
    tailscale.com/funnel: "false"
  labels:
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/name: grafana
spec:
  ingressClassName: tailscale
  rules:
  - host: grafana
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
  tls:
  - hosts:
    - grafana
